--- a/main/templates/module/module_single.html
+++ b/main/templates/module/module_single.html
@@ -455,57 +455,65 @@ Infomation from: <a href="https://data.cardiff.ac.uk/legacy/grails/module/{{ mod
     }
 
     function displayNewUserMessage(data) {
-        const message = $('#bottom-message-spacer').before(
-            `<br>
-            <div class="text-end">
-                <span data-bs-toggle="tooltip" data-bs-title="${data.datetime}" style="cursor: default;">                
-                    <div class="text-wrap text-break my-2 rounded px-4 py-2 my-1 bg-white shadow-sm" style="display: inline; overflow:hidden">
-                        ${data.message}
-                    </div>
-                </span>
-            </div>`
-        )
+        if (data.message != '') {
+            const message = $('#bottom-message-spacer').before(
+                `<br>
+                <div class="text-end">
+                    <span data-bs-toggle="tooltip" data-bs-title="${data.datetime}" style="cursor: default;">                
+                        <div class="text-wrap text-break my-2 rounded px-4 py-2 my-1 bg-white shadow-sm" style="display: inline; overflow:hidden">
+                            ${data.message}
+                        </div>
+                    </span>
+                </div>`
+            )
+        }
     }
 
     function displayNewOtherUserMessage(data) {
-        const message = $('#bottom-message-spacer').before(
-            `<br>
-            <div>
-                ${data.user}:
-                <span data-bs-toggle="tooltip" data-bs-title="${data.datetime}" style="cursor: default;">
-                    <div class="text-wrap text-break my-2 rounded px-4 py-2 my-1 bg-secondary text-white shadow-sm" style="display: inline;">
-                        ${data.message}
-                    </div>
-                </span>
-            </div>`
-        )
+        if (data.message != '') {
+            const message = $('#bottom-message-spacer').before(
+                `<br>
+                <div>
+                    ${data.user}:
+                    <span data-bs-toggle="tooltip" data-bs-title="${data.datetime}" style="cursor: default;">
+                        <div class="text-wrap text-break my-2 rounded px-4 py-2 my-1 bg-secondary text-white shadow-sm" style="display: inline;">
+                            ${data.message}
+                        </div>
+                    </span>
+                </div>`
+            )
+        }
     }
 
     function displayUserMessage(data, random_string) {
-        const message = $('#'+random_string+'-message-spacer').before(
-            `<br>
-            <div class="text-end">
-                <span data-bs-toggle="tooltip" data-bs-title="${data.datetime}" style="cursor: default;">                
-                    <div class="text-wrap text-break my-2 rounded px-4 py-2 my-1 bg-white shadow-sm" style="display: inline; overflow:hidden">
-                        ${data.message}
-                    </div>
-                </span>
-            </div>`
-        )
+        if (data.message != '') {
+            const message = $('#'+random_string+'-message-spacer').before(
+                `<br>
+                <div class="text-end">
+                    <span data-bs-toggle="tooltip" data-bs-title="${data.datetime}" style="cursor: default;">                
+                        <div class="text-wrap text-break my-2 rounded px-4 py-2 my-1 bg-white shadow-sm" style="display: inline; overflow:hidden">
+                            ${data.message}
+                        </div>
+                    </span>
+                </div>`
+            )
+        }
     }
 
     function displayOtherUserMessage(data, random_string) {
-        const message = $('#'+random_string+'-message-spacer').before(
-            `<br>
-            <div>
-                ${data.user}:
-                <span data-bs-toggle="tooltip" data-bs-title="${data.datetime}" style="cursor: default;">
-                    <div class="text-wrap text-break my-2 rounded px-4 py-2 my-1 bg-secondary text-white shadow-sm" style="display: inline;">
-                        ${data.message}
-                    </div>
-                </span>
-            </div>`
-        )
+        if (data.message != '') {
+            const message = $('#'+random_string+'-message-spacer').before(
+                `<br>
+                <div>
+                    ${data.user}:
+                    <span data-bs-toggle="tooltip" data-bs-title="${data.datetime}" style="cursor: default;">
+                        <div class="text-wrap text-break my-2 rounded px-4 py-2 my-1 bg-secondary text-white shadow-sm" style="display: inline;">
+                            ${data.message}
+                        </div>
+                    </span>
+                </div>`
+            )
+        }
     }
 
     function get_messages() {
