--- a/main/templates/module/module_single.html
+++ b/main/templates/module/module_single.html
@@ -361,93 +361,95 @@ Infomation from: <a href="https://data.cardiff.ac.uk/legacy/grails/module/{{ mod
     
     socket.connect()
 
-    socket.on('connect', () => {
-        socket.emit('room-connect', {
-            'user': `${user_id}`,
-            'room': `${thread_id}`
-        });
-        
-        // send messages to fix connection issue
-        socket.emit("wake_up",  {'user': 'client-get', 'room': `${thread_id}`, 'message': ''});
-        
-        get_messages()
-    });
-
-    /*socket.on('connect', () => {
-        socket.emit('room-connect', {
-            'user': `${user_id}`,
-            'room': `${thread_id}`
-        });
-        // console.log('connected');
-        // if(next_page > 0) {
-            
-        get_messages()
-
-        // scrollDown()
-        // }
-    });*/
-
-    socket.on('message', (data) => {
-        if ($('#no-messages-here')) {
-            message_spacers = $('#no-messages-here').before(
-               `<span id="top-message-spacer" class="p-1"></span>
-               <span id="bottom-message-spacer" class="p-1"></span>`
-           )
-
-            $('#no-messages-here').remove()
-        }
-
-
-        // console.log(data)
-
-        if(data.user == username) {
-            displayNewUserMessage(data)
-        } else {
-            displayNewOtherUserMessage(data)
-        }
-
-        // console.log(data.message)
-
-        tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-        tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
-        
-        if(!messageBox.classList.contains('active')) {
-            scrollDown()
-        }
-    })
-
-    const sendMessage = () => {
-        let message_val = $('#message-field')
-    
-        if(message_val.val() != '') {
-            socket.emit("message",  {
-                'user': `${username}`,
-                'user_id': `${user_id}`,
-                'room': `${thread_id}`,
-                'message': message_val.val()
+    $( document ).ready(() => { 
+        socket.on('connect', () => {
+            socket.emit('room-connect', {
+                'user': `${user_id}`,
+                'room': `${thread_id}`
             });
             
-            message_val.val('')
+            // send messages to fix connection issue
+            socket.emit("wake_up",  {'user': 'client-get', 'room': `${thread_id}`, 'message': ''});
+            
+            get_messages()
+        });
 
+        /*socket.on('connect', () => {
+            socket.emit('room-connect', {
+                'user': `${user_id}`,
+                'room': `${thread_id}`
+            });
+            // console.log('connected');
+            // if(next_page > 0) {
+                
+            get_messages()
+
+            // scrollDown()
+            // }
+        });*/
+
+        socket.on('message', (data) => {
+            if ($('#no-messages-here')) {
+                message_spacers = $('#no-messages-here').before(
+                `<span id="top-message-spacer" class="p-1"></span>
+                <span id="bottom-message-spacer" class="p-1"></span>`
+            )
+
+                $('#no-messages-here').remove()
+            }
+
+
+            // console.log(data)
+
+            if(data.user == username) {
+                displayNewUserMessage(data)
+            } else {
+                displayNewOtherUserMessage(data)
+            }
+
+            // console.log(data.message)
+
+            tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+            tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+            
             if(!messageBox.classList.contains('active')) {
                 scrollDown()
             }
-            
-            $('#inner_error_message').remove()
-        } else {
-            $('#inner_error_message').remove()
-            $('#error_message').append("<div id='inner_error_message'>Add a message</div>")
+        })
+
+        const sendMessage = () => {
+            let message_val = $('#message-field')
+        
+            if(message_val.val() != '') {
+                socket.emit("message",  {
+                    'user': `${username}`,
+                    'user_id': `${user_id}`,
+                    'room': `${thread_id}`,
+                    'message': message_val.val()
+                });
+                
+                message_val.val('')
+
+                if(!messageBox.classList.contains('active')) {
+                    scrollDown()
+                }
+                
+                $('#inner_error_message').remove()
+            } else {
+                $('#inner_error_message').remove()
+                $('#error_message').append("<div id='inner_error_message'>Add a message</div>")
+            };
         };
-    };
 
-    /* reference: https://youtu.be/Ezj00-Gbdl0 */
-    let input = document.getElementById('message-field');
+        /* reference: https://youtu.be/Ezj00-Gbdl0 */
+        let input = document.getElementById('message-field');
 
-    input.addEventListener('keyup', (e) => {
-        if(e.keyCode === 13) {
-            sendMessage();
-        }
-    })
+        input.addEventListener('keyup', (e) => {
+            if(e.keyCode === 13) {
+                sendMessage();
+            }
+        })
+    });
 
     messageBox.onmouseenter = () => {
         messageBox.classList.add('active')
