--- a/main/templates/module/module_single.html
+++ b/main/templates/module/module_single.html
@@ -359,7 +359,7 @@ Infomation from: <a href="https://data.cardiff.ac.uk/legacy/grails/module/{{ mod
 
     let message_id_list = []
     
-    socket.connect({secure: true})
+    socket.connect()
 
     $( document ).ready(() => { 
         socket.on('connect', () => {
