--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -15,6 +15,9 @@
         <!-- to get the font-awesome cdn link: https://cdnjs.com/libraries/font-awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
         <!-- for the icon codes: https://fontawesome.com/icons -->
+
+        <!-- reference: https://getbootstrap.com/docs/3.4/css/#:~:text=In%20fact%2C%20Bootstrap%20is%20mobile,tag%20to%20your%20. -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body>
