--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
         <!-- for the icon codes: https://fontawesome.com/icons -->
 
-        <!-- reference: https://getbootstrap.com/docs/3.4/css/#:~:text=In%20fact%2C%20Bootstrap%20is%20mobile,tag%20to%20your%20. -->
+        <!-- reference: https://getbootstrap.com/docs/3.4/css/ -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
